--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="shortcut icon" href=" /favicon.ico" /> 
 	<link href="./css/sweetalert.css" rel="stylesheet" type="text/css" />
 	<link href="./css/login.css" rel="stylesheet" type="text/css" />
 	<script src="./javascript/index.js"></script>
