--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,13 +17,18 @@
 		<input name="passwd" id="realpasswd" type="password" style="display:none;">
 		<input name="func"  type="password" value="loginInValidate" style="display:none;" disable="disabled">
 		<div class="login-panle">
-			<wired-card elevation="5">
-				<wired-input placeholder="用户名" id="username"></wired-input><br/>
-				<wired-input placeholder="密码" type="password" id="passwd"></wired-input>
-				<wired-button id="button">登陆</wired-button>
-	    	</wired-card>
+			<div class="logincard">
+				<wired-card elevation="10" style="text-align: left;width: 100%;height: 100%;text-align: center;">
+					<wired-input placeholder="用户名" id="username" style="text-align: left;width: 90%;margin: 3rem 0;"></wired-input><br/>
+					<wired-input placeholder="密码" type="password" id="passwd" style="text-align: left;width: 90%;"></wired-input><br/>
+					<div class="loginbtn">
+						<wired-button id="login">登陆</wired-button>
+						<wired-button id="signup">注册</wired-button>
+					</div>
+		    	</wired-card>
+	    	</div>
 		</div>
 	</form>
-	<script type="text/javascript" color="0,0,0" opacity='1' zIndex="-1" count="100" src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
+	<script type="text/javascript" color="0,0,0" opacity='1' zIndex="-1" count="200" src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
 </body>
 </html>
