:ok_hand: Updating code due to code review changes.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -21,11 +21,10 @@
 	<form id="loginform">
 		<input type="text" name="username" placeholder="用户名">
 		<input type="password" name="passwd" placeholder="密码">
-		<input type="text" value="loginInValidate" name="func">
-		<input type="submit" id="loginBtn" value="登陆">
+		<input id="loginBtn" type="button" value="登陆">
 	</form>
 	<script type="text/javascript" color="0,0,0" opacity='1' zIndex="-1"
-		count="400"
-		src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
+			count="100"
+			src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
 </body>
 </html>
