--- a/WebContent/signup/signup.html
+++ b/WebContent/signup/signup.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="renderer" content="webkit">
-  	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="shortcut icon" href=" ./favicon.ico" />
-	<link rel="stylesheet" href="../layui/css/layui.css"  media="all">
-	<link href="../css/sweetalert.css" rel="stylesheet" type="text/css" />
-	<link href="../css/signup.css" rel="stylesheet" type="text/css" />
-	<script src="./signup.js"></script>
-	<script src="../javascript/sweetalert-dev.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-	<script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
-  	<script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-	<title>注册-ddvudo</title>
+    <meta charset="UTF-8">
+    <meta content="webkit" name="renderer">
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+    <link href=" ./favicon.ico" rel="shortcut icon"/>
+    <link href="../layui/css/layui.css" media="all" rel="stylesheet">
+    <link href="../css/sweetalert.css" rel="stylesheet" type="text/css"/>
+    <link href="../css/signup.css" rel="stylesheet" type="text/css"/>
+    <script src="./signup.js"></script>
+    <script src="../javascript/sweetalert-dev.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <title>注册-ddvudo</title>
 </head>
 <body>
-	<div class="layui-container">
-		<div class="layui-row">
-			<div class="layui-col-xs6">
-				<div class="grid-demo grid-demo-bg1">6/12</div>
-			</div>
-			<div class="layui-col-xs6">
-				<div class="grid-demo">6/12</div>
-			</div>
-		</div>
-	</div>
-	<form id="signupform">
-		<input name="username" id="realusername"> <input
-			name="passwd" id="realpasswd" type="password"> <input
-			name="realconfirmpasswd" id="realconfirmpasswd" type="password">
-		<input name="tel" id="realtel"> <input name="mail"
-			id="realmail"> <input name="func" type="password"
-			value="signupValidate" disable="disabled">
-	</form>
-	<script type="text/javascript" color="0,0,0" opacity='1' zIndex="-1" count="200" src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
+<div class="layui-container">
+    <div class="layui-row">
+        <div class="layui-col-md8">
+            <form class="layui-form" lay-filter="signup">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">用户名</label>
+                    <div class="layui-input-block">
+                        <input autocomplete="off" class="layui-input" name="username" placeholder="用户名" type="text">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">密码</label>
+                    <div class="layui-input-block">
+                        <input autocomplete="off" class="layui-input" name="password" placeholder="密码" type="text">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">确认密码</label>
+                    <div class="layui-input-block">
+                        <input autocomplete="off" class="layui-input" name="passwordverify" placeholder="确认密码"
+                               type="text">
+                    </div>
+                </div>
+                <button class="layui-btn" lay-filter="signup" lay-submit>注册</button>
+                <button class="layui-btn" lay-filter="reset" type="reset">重置</button>
+            </form>
+        </div>
+    </div>
+</div>
+<script color="0,0,0" count="200" opacity='1' src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"
+        type="text/javascript"
+        zIndex="-1"></script>
 </body>
 </html>
