:sparkles: Introducing new features.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,10 +20,7 @@
 <div class="layui-container">
     <div class="layui-row">
         <div class="layui-col-md12">
-            <ul class="layui-nav layui-nav-tree layui-nav-side" lay-filter="main-nav-bar">
-                <li class="layui-nav-item layui-nav-itemed">
-                    <a href="javascript:;">默认展开</a>
-                </li>
+            <ul class="layui-nav layui-nav-tree layui-nav-side" id="main-nav-bar" lay-filter="main-nav-bar">
             </ul>
         </div>
     </div>
