:sparkles: Introducing new features.

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -12,7 +12,7 @@
     <script src="login.js"></script>
     <script src="./javascript/sweetalert-dev.js"></script>
     <script src="./layui/layui.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="javascript/jquery_3.3.1.js"></script>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <title>ddvudo</title>
