--- a/WebContent/resourceManage/resourcetree.html
+++ b/WebContent/resourceManage/resourcetree.html
@@ -12,7 +12,7 @@
     <link href="../zTree_v3/css/metroStyle/metroStyle.css" rel="stylesheet" type="text/css">
     <script src="../javascript/sweetalert-dev.js"></script>
     <script src="../layui/layui.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="../javascript/jquery_3.3.1.js"></script>
     <script src="../zTree_v3/js/jquery.ztree.all.js"></script>
     <script src="./resourcetree.js"></script>
 </head>
