--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
     <link href="./css/sweetalert.css" rel="stylesheet" type="text/css"/>
     <script src="./javascript/sweetalert-dev.js"></script>
     <script src="./layui/layui.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="javascript/jquery_3.3.1.js"></script>
     <script src="index.js"></script>
     <title>首页</title>
 </head>
