--- a/WebContent/resourceManage/resinsert.html
+++ b/WebContent/resourceManage/resinsert.html
@@ -10,50 +10,71 @@
     <link href="../layui/css/layui.css" rel="stylesheet" type="text/css">
     <link href="../css/sweetalert.css" rel="stylesheet" type="text/css"/>
     <link href="../zTree_v3/css/metroStyle/metroStyle.css" rel="stylesheet" type="text/css">
+    <style>
+        .layui-form-pane .layui-form-label {
+            width: 150px;
+        }
+
+        .layui-form-pane .layui-input-block {
+            margin-left: 150px;
+        }
+    </style>
     <script src="../javascript/sweetalert-dev.js"></script>
     <script src="../layui/layui.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="../javascript/jquery_3.3.1.js"></script>
     <script src="../zTree_v3/js/jquery.ztree.all.js"></script>
     <script src="resinsert.js"></script>
 </head>
 <body>
-<div class="layui-fluid">
-    <form action="" class="layui-form">
-        <div class="layui-form-item">
-            <label class="layui-form-label">节点名称</label>
-            <div class="layui-input-block">
-                <input autocomplete="off" class="layui-input" lay-verify="required" name="name" placeholder="请输入节点名称"
-                       required type="text">
-            </div>
+<div class="layui-container">
+    <div class="layui-row">
+        <div class="layui-col-md12">
+            <form action="" class="layui-form layui-form-pane">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">节点名称</label>
+                    <div class="layui-input-block">
+                        <input autocomplete="off" class="layui-input" lay-verify="required" name="name"
+                               placeholder="请输入节点名称"
+                               required type="text">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">节点中文名称</label>
+                    <div class="layui-input-block">
+                        <input autocomplete="off" class="layui-input" lay-verify="required" name="cnname"
+                               placeholder="请输入节点中文名称"
+                               required type="text">
+                    </div>
+                </div>
+                <div class="layui-form-item" pane>
+                    <label class="layui-form-label">是否菜单节点</label>
+                    <div class="layui-input-block">
+                        <input name="istop" title="是" type="radio" value="0">
+                        <input checked name="istop" title="否" type="radio" value="1">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">资源路径</label>
+                    <div class="layui-input-block">
+                        <input autocomplete="off" class="layui-input" name="urlpath" placeholder="请输入资源路径" type="text">
+                    </div>
+                </div>
+                <div class="layui-form-item" pane>
+                    <label class="layui-form-label">是否有子节点</label>
+                    <div class="layui-input-block">
+                        <input name="haschild" title="是" type="radio" value="0">
+                        <input checked name="haschild" title="否" type="radio" value="1">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-input-block">
+                        <button class="layui-btn" lay-filter="insert_res_form" lay-submit>立即提交</button>
+                        <button class="layui-btn layui-btn-primary" type="reset">重置</button>
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">节点中文名称</label>
-            <div class="layui-input-block">
-                <input autocomplete="off" class="layui-input" lay-verify="required" name="name" placeholder="请输入节点中文名称"
-                       required type="text">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">是否菜单节点</label>
-            <div class="layui-input-block">
-                <input name="istop" title="是" type="radio" value="0">
-                <input checked name="istop" title="否" type="radio" value="1">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">资源路径</label>
-            <div class="layui-input-block">
-                <input autocomplete="off" class="layui-input" name="urlpath" placeholder="请输入资源路径" type="text">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">是否有子节点</label>
-            <div class="layui-input-block">
-                <input name="haschild" title="是" type="radio" value="0">
-                <input checked name="haschild" title="否" type="radio" value="1">
-            </div>
-        </div>
-    </form>
+    </div>
 </div>
 </body>
 </html>
