--- a/WebContent/signup/signup.html
+++ b/WebContent/signup/signup.html
@@ -11,7 +11,7 @@
     <link href="../css/signup.css" rel="stylesheet" type="text/css"/>
     <script src="./signup.js"></script>
     <script src="../javascript/sweetalert-dev.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="javascript/jquery_3.3.1.js"></script>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <title>注册-ddvudo</title>
