--- a/WebContent/resourceManage/resinsert.html
+++ b/WebContent/resourceManage/resinsert.html
@@ -29,7 +29,7 @@
 <div class="layui-container">
     <div class="layui-row">
         <div class="layui-col-md12">
-            <form action="" class="layui-form layui-form-pane">
+            <form action="" class="layui-form layui-form-pane" lay-filter="resinsert">
                 <div class="layui-form-item">
                     <label class="layui-form-label">节点名称</label>
                     <div class="layui-input-block">
@@ -62,8 +62,8 @@
                 <div class="layui-form-item" pane>
                     <label class="layui-form-label">是否有子节点</label>
                     <div class="layui-input-block">
-                        <input name="haschild" title="是" type="radio" value="0">
-                        <input checked name="haschild" title="否" type="radio" value="1">
+                        <input name="haschild" title="是" type="radio" value="1">
+                        <input checked name="haschild" title="否" type="radio" value="0">
                     </div>
                 </div>
                 <div class="layui-form-item">
