:ok_hand: Updating code due to code review changes.

--- a/WebContent/resourceManage/resinsert.html
+++ b/WebContent/resourceManage/resinsert.html
@@ -62,8 +62,8 @@
                 <div class="layui-form-item" pane>
                     <label class="layui-form-label">是否有子节点</label>
                     <div class="layui-input-block">
-                        <input name="haschild" title="是" type="radio" value="1">
-                        <input checked name="haschild" title="否" type="radio" value="0">
+                        <input name="haschild" title="是" type="radio" value="true">
+                        <input checked name="haschild" title="否" type="radio" value="false">
                     </div>
                 </div>
                 <div class="layui-form-item">
