--- a/WebContent/resourceManage/resinsert.html
+++ b/WebContent/resourceManage/resinsert.html
@@ -49,8 +49,8 @@
                 <div class="layui-form-item" pane>
                     <label class="layui-form-label">是否菜单节点</label>
                     <div class="layui-input-block">
-                        <input name="istop" title="是" type="radio" value="1">
-                        <input checked name="istop" title="否" type="radio" value="2">
+                        <input name="istop" title="是" type="radio" value=1>
+                        <input checked name="istop" title="否" type="radio" value=2>
                     </div>
                 </div>
                 <div class="layui-form-item">
@@ -62,8 +62,8 @@
                 <div class="layui-form-item" pane>
                     <label class="layui-form-label">是否有子节点</label>
                     <div class="layui-input-block">
-                        <input name="haschild" title="是" type="radio" value="true">
-                        <input checked name="haschild" title="否" type="radio" value="false">
+                        <input name="haschild" title="是" type="radio" value=true>
+                        <input checked name="haschild" title="否" type="radio" value=false>
                     </div>
                 </div>
                 <div class="layui-form-item">
