:ok_hand: Updating code due to code review changes.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,8 +9,9 @@
     <link href="./layui/css/layui.css" rel="stylesheet" type="text/css">
     <link href="./css/sweetalert.css" rel="stylesheet" type="text/css"/>
     <script src="./javascript/sweetalert-dev.js"></script>
-    <script src="./layui/layui.js"></script>
+    <script src="./layui/layui.all.js"></script>
     <script src="javascript/jquery_3.3.1.js"></script>
+    <script src="javascript/main.js"></script>
     <script src="index.js"></script>
     <title>首页</title>
 </head>
