--- a/WebContent/resourceManage/resinsert.html
+++ b/WebContent/resourceManage/resinsert.html
@@ -20,9 +20,10 @@
         }
     </style>
     <script src="../javascript/sweetalert-dev.js"></script>
-    <script src="../layui/layui.js"></script>
+    <script src="../layui/layui.all.js"></script>
     <script src="../javascript/jquery_3.3.1.js"></script>
     <script src="../zTree_v3/js/jquery.ztree.all.js"></script>
+    <script src="../javascript/main.js"></script>
     <script src="resinsert.js"></script>
 </head>
 <body>
