--- a/WebContent/resourceManage/resourcetree.html
+++ b/WebContent/resourceManage/resourcetree.html
@@ -11,9 +11,10 @@
     <link href="../css/sweetalert.css" rel="stylesheet" type="text/css"/>
     <link href="../zTree_v3/css/metroStyle/metroStyle.css" rel="stylesheet" type="text/css">
     <script src="../javascript/sweetalert-dev.js"></script>
-    <script src="../layui/layui.js"></script>
+    <script src="../layui/layui.all.js"></script>
     <script src="../javascript/jquery_3.3.1.js"></script>
     <script src="../zTree_v3/js/jquery.ztree.all.js"></script>
+    <script src="../javascript/main.js"></script>
     <script src="./resourcetree.js"></script>
 </head>
 <body>
