:ok_hand: Updating code due to code review changes.

--- a/WebContent/SSRLinkDection/ssrlinkdection.html
+++ b/WebContent/SSRLinkDection/ssrlinkdection.html
@@ -44,21 +44,7 @@
     </div>
     <div class="layui-row">
         <div class="layui-col-md12">
-            <table class="layui-table" lay-even lay-skin="line">
-                <colgroup>
-                    <col width="150">
-                    <col width="200">
-                    <col>
-                </colgroup>
-                <thead>
-                <tr>
-                    <th>昵称</th>
-                    <th>加入时间</th>
-                    <th>签名</th>
-                </tr>
-                </thead>
-                <tbody>
-                </tbody>
+            <table class="layui-table" id="restable" lay-even lay-skin="line">
             </table>
         </div>
     </div>
