--- a/src/main/webapp/EnterpriseInfomation/enterpriselist.html
+++ b/src/main/webapp/EnterpriseInfomation/enterpriselist.html
@@ -18,16 +18,20 @@
     <script src="./enterpriselist.js"></script>
 </head>
 <body>
-<div class="layui-layout-body">
-    <div class="demoTable">
-        搜索名称：
-        <div class="layui-inline">
-            <input autocomplete="off" class="layui-input" id="searchname" name="name">
+<div class="layui-layout">
+    <div class="layui-card">
+        <div class="layui-card-body">
+            <div class="demoTable">
+                搜索名称：
+                <div class="layui-inline">
+                    <input autocomplete="off" class="layui-input" id="searchname" name="name">
+                </div>
+                <button class="layui-btn" data-type="reload" id="searchbtn">搜索</button>
+            </div>
+            <table class="layui-table layui-anim-scale" id="restable" lay-even lay-skin="line">
+            </table>
         </div>
-        <button class="layui-btn" data-type="reload" id="searchbtn">搜索</button>
     </div>
-    <table class="layui-table" id="restable" lay-even lay-skin="line">
-    </table>
 </div>
 </body>
 </html>
