--- a/src/main/webapp/house/house.html
+++ b/src/main/webapp/house/house.html
@@ -8,15 +8,9 @@
     <script src="../javascript/sweetalert-dev.js"></script>
     <script src="../layui/layui.all.js"></script>
     <script src="../javascript/jquery_3.3.1.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/dataTool.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js" type="text/javascript"></script>
-    <script src="https://api.map.baidu.com/api?v=2.0&ak=pB1cQmp3mKHrI8PMYQGoogGvGnpahqNn&__ec_v__=20190126"
-            type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js" type="text/javascript"></script>
+    <!--    <script src="https://api.map.baidu.com/api?v=2.0&ak=pB1cQmp3mKHrI8PMYQGoogGvGnpahqNn" type="text/javascript"></script>-->
+    <!--    <script type="text/javascript" src="//api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>-->
+    <script src="//webapi.amap.com/maps?v=1.4.15&key=187c426207df3f73a755da81f4a1ec58"></script>
     <script src="house.js" type="text/javascript"></script>
 </head>
 <body style="width: 100%;height: 100%;">
