--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -176,7 +176,7 @@
 					     class="page-title"
 					     v-for="page in pageList"
 					>
-						<i class="el-icon-caret-right"></i>
+						<!--<i class="el-icon-caret-right"></i>-->
 						<span>{{page.name}}</span>
 						<i @click.stop="closePage(page)" class="el-icon-close" v-if="!page.hide_close"></i>
 					</div>
