统一所有Controller的返回值，树结点的增加功能

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,6 +36,8 @@
 					         :default-openeds="default_openeds"
 					         :unique-opened="unique_opened"
 					         @select="selectMenu"
+					         @close="selectMenu"
+					         @open="selectMenu"
 					         class="el-menu-style-1"
 					         default-active="2"
 					>
