--- a/src/main/resources/static/sa-html/menu/menuadd.html
+++ b/src/main/resources/static/sa-html/menu/menuadd.html
@@ -32,6 +32,7 @@
 	<script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
 	<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 	<script src="https://unpkg.com/jquery@3.4.1/dist/jquery.js"></script>
+	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
 	<script type="text/javascript">
         window.setData = function (data) {
             if (!data) return;
@@ -67,7 +68,13 @@
                             if (valid) {
                                 let data = JSON.stringify(this.$refs[formName].model);
                                 $.post("/resource", this.$refs[formName].model, function (data, status, xhr) {
-                                    console.log(data);
+                                    if (data && data.state) {
+                                        layer.alert('添加成功', {icon: 1}, function (index) {
+                                            layer.close(index);
+                                            let curr_index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+                                            parent.layer.close(curr_index); //再执行关闭
+                                        });
+                                    }
                                 }, "json");
                             } else {
                                 alert('出现错误!');
