--- a/src/main/resources/static/sa-html/menu/menuadd.html
+++ b/src/main/resources/static/sa-html/menu/menuadd.html
@@ -73,6 +73,8 @@
                                             layer.close(index);
                                             let curr_index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
                                             parent.layer.close(curr_index); //再执行关闭
+                                            console.log(parent);
+                                            parent.refreshTreeData();
                                         });
                                     }
                                 }, "json");
