添加和删除节点之后无法刷新树节点

--- a/src/main/resources/static/sa-html/menu/menutree.html
+++ b/src/main/resources/static/sa-html/menu/menutree.html
@@ -106,10 +106,14 @@
                             });
                         },
                         remove(node, data) {
-                            // const parent = node.parent;
-                            // const children = parent.data.children || parent.data;
-                            // const index = children.findIndex(d => d.id === data.id);
-                            // children.splice(index, 1);
+                            $.ajax({
+                                url: '/resource/' + data.id,
+                                type: 'DELETE',
+                                success: function (result) {
+                                    console.log(result);
+                                    refreshTreeData();
+                                }
+                            });
                         },
                     }
                 });
